Make language picked bugger on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -583,27 +583,34 @@ body {
 }
 
 .language-picker {
+  --size: 1rem;
+
   position: fixed;
   top: 0.5rem;
   right: 0.5rem;
 
   display: flex;
-  gap: 0.5rem;
+  gap: calc(var(--size) * 0.5);
 
   filter: drop-shadow(0px 0px 4px rgba(50, 50, 0, 0.5));
+}
+@media (max-width: 500px) or (max-height: 750px) {
+  .language-picker {
+    --size: 2rem;
+  }
 }
 
 .language-picker > * {
   display: block;
-  width: 1rem;
-  height: 1rem;
+  width: var(--size);
+  height: var(--size);
 
-  font-size: 0.6rem;
-  line-height: 0.8rem;
+  font-size: calc(var(--size) * 0.6);
+  line-height: calc(var(--size) * 0.8);
   text-align: center;
 
   background-color: var(--language-picker-color);
   color: var(--language-picker-text-color);
 
-  border-radius: 0.2rem;
+  border-radius: calc(var(--size) * 0.2);
 }
